# TiStore

./: CMakeLists.txt  README.md  TiStore_vc2015.sln  TimaxStore_vc2015.sln
projects/vc2015/TiStoreTest/: TiStoreTest.vcxproj  TiStoreTest.vcxproj.filters
projects/vc2015/TimaxStoreTest/: TimaxStoreTest.vcxproj  TimaxStoreTest.vcxproj.filters
sjjy/: sjjy-leaflet.docx
src/: CMakeLists.txt
src/TiStore/: TiFS.cpp  TiFS.h  TiStore.h  traits.h
src/TiStore/basic/: cssize  cstdint  ssize.h  stdint.h
src/TiStore/fs/: BlockDevice.h  Common.h  ErrorCode.h  FileSystem.h  Initor.h  MetaData.h  SuperBlock.h
src/TiStore/kv/: BloomFilter.h  BloomFilterFixed.h  Hash.h  SkipList.h  Slice.h
src/TiStore/lang/: Property.h  TypeInfo.h
src/TiStore/traits/: bool_type.h  common.h  const_type.h  integral_constant.h  is_same.h  remove_const.h  remove_cv.h  remove_volatile.h
src/TiStoreTest/: TiStoreTest.cpp  test.cpp  test.h
src/TimaxStore/: TimaxFS.h  TimaxStore.h  std_ssize.h
src/TimaxStore/fs/: BlockDevice.h  FileSystem.h  Initor.h  MetaData.h  SuperBlock.h
src/TimaxStoreTest/: TimaxStoreTest.cpp
